VIEW Login panel v.1 finished

--- a/src/views/login.html
+++ b/src/views/login.html
@@ -13,15 +13,15 @@
         <div class="shape"></div>
     </div>
     <form>
-        <h3>Login Here</h3>
+        <h3>Ingrese sus credenciales</h3>
 
-        <label for="username">Username</label>
-        <input type="text" placeholder="Email or Phone" id="username">
+        <label for="username">Usuario</label>
+        <input type="text" placeholder="Correo electrónico" id="username">
 
-        <label for="password">Password</label>
-        <input type="password" placeholder="Password" id="password">
+        <label for="password">Contraseña</label>
+        <input type="password" placeholder="****" id="password">
 
-        <button>Log In</button>
+        <button>Ingresar</button>
         <div class="social">
         </div>
     </form>
