--- a/src/views/scss/bases/_variables.scss
+++ b/src/views/scss/bases/_variables.scss
@@ -1,18 +1,15 @@
-$blanco : #f5f5f5;
 // Colors
-$greenSeaweed: rgba(2, 128, 144, 1);
-$blueQueen: rgba(69, 105, 144, 1);
-$redFire: rgba(244, 91, 105, 1);
-
-// Fonts
-$fontAsap: 'Asap', sans-serif;
-
-$base-bgcolor: #354152;
-$base-color: #7e8ba3;
-$base-font-weight: 300;
-$base-font-size: 1rem;
-$base-line-height: 1.5;
-$base-font-family: Helvetica Neue;
-$base-font-family-fallback: sans-serif;
+$blanco : #f5f5f5;
+$verdeClaro : #74F3BB;
+$verdeOscuro : #2D9C7F;
+$verdeBotones : #25bd94;
+$azulOscuro : #1845ad;
+$azulClaro : #23a2f6;
+$beigeClaro : #fdf5e6;
+$beigeOscuro : #f5deb3;
+$beigeTransparente : #f5deb359;
+$beige2 : #dfcba6;
+$negroHumo : #1c0d02;
+$gris : #2c241f;
 
 
