--- a/src/views/css/app.css
+++ b/src/views/css/app.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #080710;
+  background-color: #fdf5e6;
 }
 
 .background {
@@ -19,13 +19,13 @@ body {
 }
 
 .shape:first-child {
-  background: linear-gradient(#1845ad, #23a2f6);
+  background: linear-gradient(#74F3BB, #2D9C7F);
   left: -80px;
   top: -80px;
 }
 
 .shape:last-child {
-  background: linear-gradient(to right, #ff512f, #f09819);
+  background: linear-gradient(to right, #1845ad, #23a2f6);
   right: -30px;
   bottom: -80px;
 }
@@ -33,21 +33,21 @@ body {
 form {
   height: 520px;
   width: 400px;
-  background-color: rgba(255, 255, 255, 0.13);
+  background-color: rgba(245, 222, 179, 0.3490196078);
   position: absolute;
   transform: translate(-50%, -50%);
   top: 50%;
   left: 50%;
   border-radius: 10px;
   backdrop-filter: blur(10px);
-  border: 2px solid rgba(255, 255, 255, 0.1);
-  box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
+  border: 2px solid rgba(245, 222, 179, 0.3490196078);
+  box-shadow: 0 0 40px #1c0d02;
   padding: 50px 35px;
 }
 
 form * {
   font-family: "Poppins", sans-serif;
-  color: #ffffff;
+  color: #1c0d02;
   letter-spacing: 0.5px;
   outline: none;
   border: none;
@@ -71,7 +71,7 @@ input {
   display: block;
   height: 50px;
   width: 100%;
-  background-color: rgba(255, 255, 255, 0.07);
+  background-color: #dfcba6;
   border-radius: 3px;
   padding: 0 10px;
   margin-top: 8px;
@@ -80,14 +80,14 @@ input {
 }
 
 ::placeholder {
-  color: #e5e5e5;
+  color: #2c241f;
 }
 
 button {
   margin-top: 50px;
   width: 100%;
-  background-color: #ffffff;
-  color: #080710;
+  background-color: #25bd94;
+  color: #1c0d02;
   padding: 15px 0;
   font-size: 18px;
   font-weight: 600;
