added some classes

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -3,26 +3,21 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>ISCow-In</title>    
+    <title>ISCow-In</title>  
+    <link rel="stylesheet" href="css\app.css"> 
 </head>
+
 <body>
-    <header class="header">
-        <div class="container content-header">
-            <div class="bar">
-                <a href="index.html">
-                    <img src="src\views\img\logo.svg" alt="logo">
-                </a>
-                <nav class="menu">
-                    <a href="index.html">Home</a>
-                    <a href="index.html">Sobre</a>
-                    <a href="index.html">Contato</a>
-                </nav>
-                
-            </div>
+    <header class="header inicio">
+        <div class="contenedor contenido-header">
+        <h1>Supermercado La 33</h1>
+
+        <nav class="navegacion">
+            <a href="products.html">Productos</a>
+            <a href="carrito.html">Carrito</a>
+            <a href="bill.html">Factura</a>
+        </nav>
         </div>
     </header>
-    <h1>My First Web Page</h1>
-    <p>My first paragraph.</p>
 </body>
 </html>
