--- a/src/views/css/app.css
+++ b/src/views/css/app.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 body {
   background-color: #fdf5e6;
 }
@@ -93,4 +94,21 @@ button {
   font-weight: 600;
   border-radius: 5px;
   cursor: pointer;
+}
+
+#footer h2 {
+  font-size: 2.5rem;
+  font-weight: 600;
+  background-color: #1c0d02;
+  color: #fdf5e6;
+  text-align: center;
+  width: 100%;
+  padding: 10px 10px 0px 10px;
+  position: fixed;
+  bottom: 0;
+}
+
+body {
+  font-family: "Poppins", sans-serif;
+  background-color: #fdf5e6;
 }
