Playin with index css

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -8,16 +8,30 @@
 </head>
 
 <body>
-    <header class="header inicio">
+    <header class="header">
         <div class="contenedor contenido-header">
-        <h1>Supermercado La 33</h1>
+            <div class="barra">
+                <a href="index.html">
+                    <img src="img\logo.svg" alt="Logotipo de ISCow-In">ISCow-In
+                </a>
 
-        <nav class="navegacion">
-            <a href="products.html">Productos</a>
-            <a href="carrito.html">Carrito</a>
-            <a href="bill.html">Factura</a>
-        </nav>
+                <nav class="navegacion">
+                    <a href="reports.html">Reportes</a>
+                    <a href="contact.html">Contacto</a>
+                    <a href="account.html">Cuenta</a>
+                </nav>
+            </div>
         </div>
     </header>
+
+    <main class="contenedor seccion">
+        <h1>Tabla</h1>
+    </main>
+
+    <footer class="footer seccion">
+        <div class="contenedor contenedor-footer">
+            <p class="copyrigth">ISCow-In &copy; 2021</p>
+        </div>
+    </footer>
 </body>
 </html>
