--- a/src/views/css/app.css
+++ b/src/views/css/app.css
@@ -1,8 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-body {
-  background-color: #fdf5e6;
-}
-
 .background {
   width: 430px;
   height: 520px;
@@ -96,6 +92,10 @@ button {
   cursor: pointer;
 }
 
+footer {
+  background-color: #1c0d02;
+}
+
 #footer h2 {
   font-size: 2.5rem;
   font-weight: 600;
@@ -108,7 +108,103 @@ button {
   bottom: 0;
 }
 
+html {
+  font-size: 50.5%;
+  box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
 body {
   font-family: "Poppins", sans-serif;
   background-color: #fdf5e6;
+}
+
+p {
+  font-size: 2rem;
+}
+
+.contenedor {
+  width: 95%;
+  max-width: 150rem;
+  margin: 0 auto;
+}
+.contenedor .imagen {
+  max-width: 120rem;
+  align-items: center;
+}
+
+a {
+  text-decoration: none;
+}
+
+h1, h2, h3 {
+  margin: 0 0 5rem 0;
+}
+
+h1 {
+  font-size: 3rem;
+}
+
+h2 {
+  font-size: 2.6rem;
+}
+
+h3 {
+  font-size: 2rem;
+}
+
+.barra {
+  padding-top: 3rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.navegacion {
+  display: flex;
+  gap: 2rem;
+}
+.navegacion a {
+  color: #1c0d02;
+  text-decoration: none;
+  font-size: 1.8rem;
+  display: block;
+  text-align: center;
+}
+.navegacion a:hover {
+  color: #23a2f6;
+}
+
+.header {
+  background-color: #f5deb3;
+}
+.header h1 {
+  color: #1c0d02;
+  text-align: center;
+  margin: 0;
+  text-decoration: none;
+}
+.header .contenido-header {
+  display: flex;
+  justify-content: space-between;
+  padding: 2rem;
+  align-items: center;
+}
+
+.navegacion {
+  display: flex;
+  gap: 2rem;
+}
+.navegacion a {
+  text-decoration: none;
+  text-align: center;
+  color: #1c0d02;
+  font-size: 1.6rem;
+}
+.navegacion a:hover {
+  color: #f5deb3;
 }
