--- a/src/views/scss/layout/_footer.scss
+++ b/src/views/scss/layout/_footer.scss
@@ -1,6 +1,10 @@
 @use 'bases/mixins' as m;
 @use 'bases/variables' as v;
 
+footer{
+    background-color: v.$negroHumo;
+}
+
 #footer h2{
     font-size: 2.5rem;
     font-weight: 600;
