--- a/src/views/scss/layout/_globales.scss
+++ b/src/views/scss/layout/_globales.scss
@@ -1,10 +1,10 @@
-@use 'variables' as v;
+@use 'bases/variables' as v;
 
 html{
     font-size: 50.5%;
     box-sizing: border-box;
-
 }
+
 *,
 *:before,
 *:after{
