--- a/src/views/scss/layout/_navegacion.scss
+++ b/src/views/scss/layout/_navegacion.scss
@@ -1,10 +1,22 @@
-@use 'variables' as v;
+@use 'bases/variables' as v;
 
 .barra{
+    padding-top: 3rem;
     display: flex;
     flex-direction: column;
-    @include tablet{
-        flex-direction: row;
-        justify-content: space-between;
+}
+
+.navegacion{
+    display: flex;
+    gap: 2rem;
+    a{
+        color: v.$negroHumo;
+        text-decoration: none;
+        font-size: 1.8rem;
+        display: block;
+        text-align: center;
+        &:hover{
+            color: v.$azulClaro;
+        }
     }
 }
