Developing landing page

--- a/src/views/css/app.css
+++ b/src/views/css/app.css
@@ -93,19 +93,15 @@ button {
 }
 
 footer {
+  padding: 2rem;
   background-color: #1c0d02;
 }
-
-#footer h2 {
-  font-size: 2.5rem;
-  font-weight: 600;
-  background-color: #1c0d02;
+footer .contenedor-footer {
+  padding-top: 2rem;
+}
+footer .copyright {
   color: #fdf5e6;
   text-align: center;
-  width: 100%;
-  padding: 10px 10px 0px 10px;
-  position: fixed;
-  bottom: 0;
 }
 
 html {
@@ -206,5 +202,5 @@ h3 {
   font-size: 1.6rem;
 }
 .navegacion a:hover {
-  color: #f5deb3;
+  color: #8a6642;
 }
