--- a/src/views/index.html
+++ b/src/views/index.html
@@ -30,7 +30,7 @@
 
     <footer class="footer seccion">
         <div class="contenedor contenedor-footer">
-            <p class="copyrigth">ISCow-In &copy; 2021</p>
+            <p class="copyright">ISCow-In &copy; 2021</p>
         </div>
     </footer>
 </body>
