--- a/src/views/scss/layout/_header.scss
+++ b/src/views/scss/layout/_header.scss
@@ -26,7 +26,7 @@
         color: v.$negroHumo;
         font-size: 1.6rem;
         &:hover{
-            color:v.$beigeOscuro;
+            color:v.$beigePardo;
         }
     }
 }
