--- a/src/views/registerUser.html
+++ b/src/views/registerUser.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ISCow-In</title>  
+    <title>ISCow-In - Registro</title>  
     <link rel="stylesheet" href="css\app.css"> 
 </head>
 
@@ -18,7 +18,6 @@
                 <nav class="navegacion">
                     <a href="reports.html">Reportes</a>
                     <a href="account.html">Cuenta</a>
-                    <a href="account.html">Salir</a>
                 </nav>
             </div>
         </div>
