Some minor changes, ready to merge from develop

--- a/src/views/registerUser.html
+++ b/src/views/registerUser.html
@@ -18,6 +18,7 @@
                 <nav class="navegacion">
                     <a href="reports.html">Reportes</a>
                     <a href="account.html">Cuenta</a>
+                    <a href="account.html">Salir</a>
                 </nav>
             </div>
         </div>
