showing data in table from json

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -12,7 +12,7 @@
         <div class="contenedor contenido-header">
             <div class="barra">
                 <a href="index.html">
-                    <img src="img\logo.svg" alt="Logotipo de ISCow-In">ISCow-In
+                    <img src="" alt="Logotipo de ISCow-In">ISCow-In
                 </a>
 
                 <nav class="navegacion">
@@ -26,6 +26,20 @@
 
     <main class="contenedor seccion">
         <h1>Tabla</h1>
+        <table class="tabla">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Raza</th>
+                    <th>Sexo</th>
+                    <th>Fecha de Nacimiento</th>
+                    <th>Edad</th>
+                    <th>Origen</th>
+                    <th>Acciones</th>
+                </tr>
+            </thead>
+                <tbody id="tableBody_Cows">
+            </tbody>
     </main>
 
     <footer class="footer seccion">
@@ -36,5 +50,6 @@
             </div>
         </div>
     </footer>
+    <script src="../../index.js"></script>
 </body>
 </html>
