--- a/src/views/index.html
+++ b/src/views/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ISCow-In</title>  
+    <title>ISCow-In</title>
+    <!-- Bootstrap core CSS -->  
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="css\app.css"> 
 </head>
 
@@ -26,27 +28,36 @@
 
     <main class="contenedor seccion">
         <h1>Tabla</h1>
-        <table class="tabla">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Raza</th>
-                    <th>Sexo</th>
-                    <th>Fecha de Nacimiento</th>
-                    <th>Edad</th>
-                    <th>Origen</th>
-                    <th>Acciones</th>
-                </tr>
-            </thead>
-                <tbody id="tableBody_Cows">
-            </tbody>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-5">
+                    <div class="table-responsive">
+                        <table class="tabla">
+                            <thead>
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Raza</th>
+                                    <th>Sexo</th>
+                                    <th>Fecha de Nacimiento</th>
+                                    <th>Edad</th>
+                                    <th>Origen</th>
+                                    <th>Acciones</th>
+                                </tr>
+                            </thead>
+                                <tbody id="tableBody_Cows">
+                            </tbody>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
     </main>
 
     <footer class="footer seccion">
         <div class="contenedor contenedor-footer">
             <p class="copyright">ISCow-In &copy; 2021</p>
             <div class="contenedor-contacto">
-                <a href="mailto:miguel.rubiano01@uptc.edu.co">Contacto: miguel.rubiano01@uptc.edu.co</a>
+                <a href="mailto:miguel.rubiano01@uptc.edu.co">Contacto: iscowin@uptc.edu.co</a>
             </div>
         </div>
     </footer>
