--- a/src/views/index.html
+++ b/src/views/index.html
@@ -28,6 +28,10 @@
 
     <main class="contenedor seccion">
         <h1>Tabla</h1>
+        
+    </main>
+
+    <section class="seccion contenedor">
         <div class="container">
             <div class="row">
                 <div class="col-md-5">
@@ -50,8 +54,7 @@
                 </div>
             </div>
         </div>
-        
-    </main>
+    </section>
 
     <footer class="footer seccion">
         <div class="contenedor contenedor-footer">
