--- a/src/views/scss/layout/_globales.scss
+++ b/src/views/scss/layout/_globales.scss
@@ -23,11 +23,12 @@ p{
 .contenedor{
     width: 95%;
     max-width: 150rem;
-    margin: 0 auto; 
-    .imagen{
-        max-width: 120rem;
-        align-items: center;
-    }   
+    margin: 0 auto;    
+}
+
+.seccion{
+    margin-top: 2rem;
+    margin-bottom: 2rem;
 }
 
 
