--- a/src/views/scss/layout/_index.scss
+++ b/src/views/scss/layout/_index.scss
@@ -1,6 +1,6 @@
 @forward 'login';
 @forward 'footer';
-@forward 'landing';
+@forward 'table';
 @forward 'globales';
 @forward 'navegacion';
 @forward 'header';
