--- a/src/views/index.html
+++ b/src/views/index.html
@@ -32,11 +32,9 @@
     </main>
 
     <section class="seccion contenedor">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-5">
+        <div class="container ">
                     <div class="table-responsive">
-                        <table class="tabla">
+                        <table class="table table-striped table-hover">
                             <thead>
                                 <tr>
                                     <th>ID</th>
@@ -48,15 +46,13 @@
                                     <th>Acciones</th>
                                 </tr>
                             </thead>
-                                <tbody id="tableBody_Cows">
+                                <tbody id="tableBody_Cows" class="table-group-divider">
                             </tbody>
                     </div>
-                </div>
-            </div>
         </div>
     </section>
 
-    <footer class="footer seccion">
+    <footer class="footer seccion fixed-bottom"> <!-- need to fix the way the footer is inside the main section -->
         <div class="contenedor contenedor-footer">
             <p class="copyright">ISCow-In &copy; 2021</p>
             <div class="contenedor-contacto">
