--- a/src/views/css/app.css
+++ b/src/views/css/app.css
@@ -1,7 +1,4 @@
-body {
-  background-color: #fdf5e6;
-}
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 .background {
   width: 430px;
   height: 520px;
@@ -93,4 +90,139 @@ button {
   font-weight: 600;
   border-radius: 5px;
   cursor: pointer;
+}
+
+footer {
+  padding: 2rem 0;
+  background-color: #1c0d02;
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  margin-bottom: 0;
+}
+footer .contenedor-footer {
+  padding-top: 2rem;
+}
+footer .copyright {
+  font-size: 2.2rem;
+  color: #fdf5e6;
+  text-align: center;
+}
+footer a {
+  color: #fdf5e6;
+  font-size: 2rem;
+  text-align: center;
+  margin-top: 2rem;
+}
+footer a:hover {
+  color: #f5deb3;
+}
+footer .contenedor-contacto {
+  justify-content: space-between;
+  text-align: center;
+  align-items: center;
+  gap: 2rem;
+  margin-top: 2rem;
+}
+
+html {
+  font-size: 50.5%;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+body {
+  font-family: "Poppins", sans-serif;
+  background-color: #fdf5e6;
+  display: flex;
+  flex-direction: column;
+}
+
+p {
+  font-size: 2rem;
+}
+
+.contenedor {
+  width: 95%;
+  max-width: 150rem;
+  margin: 0 auto;
+}
+
+.seccion {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+a {
+  text-decoration: none;
+}
+
+h1, h2, h3 {
+  margin: 0 0 5rem 0;
+}
+
+h1 {
+  font-size: 3rem;
+}
+
+h2 {
+  font-size: 2.6rem;
+}
+
+h3 {
+  font-size: 2rem;
+}
+
+.barra {
+  padding-top: 3rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.navegacion {
+  gap: 2rem;
+}
+.navegacion a {
+  color: #1c0d02;
+  text-decoration: none;
+  font-size: 1.8rem;
+  display: block;
+  text-align: center;
+}
+.navegacion a:hover {
+  color: #23a2f6;
+}
+
+.header {
+  background-color: #f5deb3;
+}
+.header h1 {
+  color: #1c0d02;
+  text-align: center;
+  margin: 0;
+  text-decoration: none;
+}
+.header .contenido-header {
+  display: flex;
+  justify-content: space-between;
+  padding: 2rem;
+  align-items: center;
+}
+
+.navegacion {
+  display: flex;
+  gap: 2rem;
+}
+.navegacion a {
+  text-decoration: none;
+  text-align: center;
+  color: #1c0d02;
+  font-size: 1.6rem;
+}
+.navegacion a:hover {
+  color: #8a6642;
 }
