--- a/src/views/index.html
+++ b/src/views/index.html
@@ -3,26 +3,63 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>ISCow-In</title>    
+    <title>ISCow-In</title>
+    <!-- Bootstrap core CSS -->  
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="css\app.css"> 
 </head>
+
 <body>
     <header class="header">
-        <div class="container content-header">
-            <div class="bar">
+        <div class="contenedor contenido-header">
+            <div class="barra">
                 <a href="index.html">
-                    <img src="src\views\img\logo.svg" alt="logo">
+                    <img src="" alt="Logotipo de ISCow-In">ISCow-In
                 </a>
-                <nav class="menu">
-                    <a href="index.html">Home</a>
-                    <a href="index.html">Sobre</a>
-                    <a href="index.html">Contato</a>
+
+                <nav class="navegacion">
+                    <a href="reports.html">Reportes</a>
+                    <a href="account.html">Cuenta</a>
+                    <a href="account.html">Salir</a>
                 </nav>
-                
             </div>
         </div>
     </header>
-    <h1>My First Web Page</h1>
-    <p>My first paragraph.</p>
+
+    <main class="contenedor seccion">
+        <h1>Tabla</h1>
+        
+    </main>
+
+    <section class="seccion contenedor">
+        <div class="container ">
+                    <div class="table-responsive">
+                        <table class="table table-striped table-hover">
+                            <thead>
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Raza</th>
+                                    <th>Sexo</th>
+                                    <th>Fecha de Nacimiento</th>
+                                    <th>Edad</th>
+                                    <th>Origen</th>
+                                    <th>Acciones</th>
+                                </tr>
+                            </thead>
+                                <tbody id="tableBody_Cows" class="table-group-divider">
+                            </tbody>
+                    </div>
+        </div>
+    </section>
+
+    <footer class="footer seccion fixed-bottom"> <!-- need to fix the way the footer is inside the main section -->
+        <div class="contenedor contenedor-footer">
+            <p class="copyright">ISCow-In &copy; 2021</p>
+            <div class="contenedor-contacto">
+                <a href="mailto:miguel.rubiano01@uptc.edu.co">Contacto: iscowin@uptc.edu.co</a>
+            </div>
+        </div>
+    </footer>
+    <script src="../../index.js"></script>
 </body>
 </html>
