--- a/src/views/index.html
+++ b/src/views/index.html
@@ -52,7 +52,7 @@
         </div>
     </section>
 
-    <footer class="footer seccion fixed-bottom"> <!-- need to fix the way the footer is inside the main section -->
+    <footer class="footer seccion "> <!-- need to fix the way the footer is inside the main section -->
         <div class="contenedor contenedor-footer">
             <p class="copyright">ISCow-In &copy; 2021</p>
             <div class="contenedor-contacto">
