--- a/src/views/index.html
+++ b/src/views/index.html
@@ -7,6 +7,7 @@
     <!-- Bootstrap core CSS -->  
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="css\app.css"> 
+    <link href="https://cdn.datatables.net/1.11.3/js/dataTables.bootstrap5.min.css">
 </head>
 
 <body>
@@ -34,7 +35,7 @@
     <section class="seccion contenedor">
         <div class="container ">
                     <div class="table-responsive">
-                        <table class="table table-striped table-hover">
+                        <table id="table_Cows" class="table table-striped table-hover">
                             <thead>
                                 <tr>
                                     <th>ID</th>
@@ -48,11 +49,12 @@
                             </thead>
                                 <tbody id="tableBody_Cows" class="table-group-divider">
                             </tbody>
+                        </table>
                     </div>
         </div>
     </section>
 
-    <footer class="footer seccion fixed-bottom"> <!-- need to fix the way the footer is inside the main section -->
+    <footer class="footer"> <!-- need to fix the way the footer is inside the main section -->
         <div class="contenedor contenedor-footer">
             <p class="copyright">ISCow-In &copy; 2021</p>
             <div class="contenedor-contacto">
@@ -60,6 +62,11 @@
             </div>
         </div>
     </footer>
+    <!-- Bootstrap core JavaScript Datatables-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.11.3/js/dataTables.bootstrap5.min.js"></script>
     <script src="../../index.js"></script>
 </body>
 </html>
