--- a/src/views/index.html
+++ b/src/views/index.html
@@ -6,8 +6,10 @@
     <title>ISCow-In</title>
     <!-- Bootstrap core CSS -->  
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css\app.css"> 
-    <link href="https://cdn.datatables.net/1.11.3/js/dataTables.bootstrap5.min.css">
+
+
 </head>
 
 <body>
@@ -35,7 +37,7 @@
     <section class="seccion contenedor">
         <div class="container ">
                     <div class="table-responsive">
-                        <table id="table_Cows" class="table table-striped table-hover">
+                        <table id="table" class="table table-striped table-hover">
                             <thead>
                                 <tr>
                                     <th>ID</th>
@@ -62,11 +64,8 @@
             </div>
         </div>
     </footer>
-    <!-- Bootstrap core JavaScript Datatables-->
+    <!-- Bootstrap core JavaScript-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.11.3/js/dataTables.bootstrap5.min.js"></script>
     <script src="../../index.js"></script>
 </body>
 </html>
