--- a/src/views/css/app.css
+++ b/src/views/css/app.css
@@ -14,7 +14,8 @@
   position: absolute;
   border-radius: 50%;
 }
-.background .shape button {
+
+.boton-login {
   margin-top: 50px;
   width: 100%;
   background-color: #25bd94;
