--- a/src/views/login.html
+++ b/src/views/login.html
@@ -8,23 +8,24 @@
 </head>
 
 <body>
-    <div class="background">
-        <div class="shape"></div>
-        <div class="shape"></div>
-    </div>
-    <form>
-        <h3>Ingrese sus credenciales</h3>
-
-        <label for="username">Usuario</label>
-        <input type="text" placeholder="Correo electrónico" id="username">
-
-        <label for="password">Contraseña</label>
-        <input type="password" placeholder="****" id="password">
-
-        <button>Ingresar</button>
-        <div class="social">
+    
+        <div class="background">
+            <div class="shape"></div>
+            <div class="shape"></div>
         </div>
-    </form>
+        <form>
+            <h3>Ingrese sus credenciales</h3>
+    
+            <label for="username">Usuario</label>
+            <input type="text" placeholder="Correo electrónico" id="username">
+    
+            <label for="password">Contraseña</label>
+            <input type="password" placeholder="****" id="password">
+    
+            <button class="boton-login">Ingresar</button>
+        </form>
+    
+    
 </body>
 
 
