--- a/src/views/registerUser.html
+++ b/src/views/registerUser.html
@@ -25,10 +25,22 @@
     </header>
 
     <main class="contenedor seccion">
-        <h1>Tabla</h1>
+        <form>
+            <h3>Ingrese sus credenciales</h3>
+    
+            <label for="username">Usuario</label>
+            <input type="text" placeholder="Correo electrónico" id="username">
+    
+            <label for="password">Contraseña</label>
+            <input type="password" placeholder="****" id="password">
+    
+            <button>Ingresar</button>
+            <div class="social">
+            </div>
+        </form>
     </main>
 
-    <footer class="footer seccion">
+    <footer class="footer seccion fixed-bottom register">
         <div class="contenedor contenedor-footer">
             <p class="copyright">ISCow-In &copy; 2021</p>
             <div class="contenedor-contacto">
