--- a/src/views/login.html
+++ b/src/views/login.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    
+    <div class="login">
         <div class="background">
             <div class="shape"></div>
             <div class="shape"></div>
@@ -24,7 +24,7 @@
     
             <button class="boton-login">Ingresar</button>
         </form>
-    
+    </div>
     
 </body>
 
