--- a/src/views/registerUser.html
+++ b/src/views/registerUser.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ISCow-In - Registro</title>  
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="css\app.css"> 
 </head>
 
@@ -24,23 +25,87 @@
         </div>
     </header>
 
-    <main class="contenedor seccion">
-        <form>
-            <h3>Ingrese sus credenciales</h3>
-    
-            <label for="username">Usuario</label>
-            <input type="text" placeholder="Correo electrónico" id="username">
-    
-            <label for="password">Contraseña</label>
-            <input type="password" placeholder="****" id="password">
-    
-            <button>Ingresar</button>
-            <div class="social">
+    <section class="h-100 h-custom">
+        <div class="container py-5 h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col-12">
+            <div class="card card-registration card-registration-2" style="border-radius: 15px;">
+                <div class="card-body p-0">
+                <div class="row g-0">
+                    <div class="col-lg-6">
+                    <div class="p-5 personal-form">
+                        <h3 class="fw-normal mb-5"">Datos personales</h3>
+                        <div class="row">
+                        <div class="col-md-6 mb-4 pb-2">
+                            <div class="form-outline">
+                            <input type="text" id="name" class="form-control form-control-lg" />
+                            <label class="form-label" for="form3Examplev2">Nombre</label>
+                            </div>
+                        </div>
+                        <div class="col-md-6 mb-4 pb-2">
+                            <div class="form-outline">
+                            <input type="text" id="lastname" class="form-control form-control-lg" />
+                            <label class="form-label" for="form3Examplev3">Apellido</label>
+                            </div>
+                        </div>
+                        </div>
+                        <div class="col-md-6 mb-4 pb-2">
+                            <div class="form-outline mb-4">
+                                <input type="text" id="username" class="form-control form-control-lg" />
+                                <label class="form-label" for="form3Example1cg">Nombre de Usuario</label>
+                            </div>
+                        </div>
+                        <div class="mb-4 pb-2">
+                        <div class="form-outline">
+                            <input type="email" id="email" class="form-control form-control-lg" />
+                            <label class="form-label" for="email">Correo electrónico</label>
+                        </div>
+                        </div>
+                        <div class="row">
+                        <div class="col-md-6 mb-4 pb-2 mb-md-0 pb-md-0">
+                            <div class="form-outline">
+                            <input type="text" id="idnumber" class="form-control form-control-lg" />
+                            <label class="form-label" for="form3Examplev5">Número de identificación</label>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
+                    </div>
+                    <div class="col-lg-6 bg-indigo text-white">
+                    <div class="p-5 finca-form">
+                        <h3 class="fw-normal mb-5">Datos de la finca</h3>
+                        <div class="col-md-5 mb-4 pb-2">
+                        <div class="form-outline form-white">
+                            <input type="text" id="form3Examplea2" class="form-control form-control-lg" />
+                            <label class="form-label" for="form3Examplea2">Nombre de la finca</label>
+                        </div>
+                        </div>
+                        <div class="mb-4 pb-2">
+                        <div class="form-outline form-white">
+                            <input type="text" id="form3Examplea3" class="form-control form-control-lg" />
+                            <label class="form-label" for="form3Examplea3">Dirección</label>
+                        </div>
+                        </div>
+                        <div class="row">
+                        <div class="col-md-5 mb-4 pb-2">
+                            <div class="form-outline form-white">
+                            <input type="text" id="form3Examplea4" class="form-control form-control-lg" />
+                            <label class="form-label" for="form3Examplea4">Número de lotes</label>
+                            </div>
+                        </div>
+                        <button type="button" class="btn btn-light btn-lg"
+                        data-mdb-ripple-color="dark">Register</button>
+                    </div>
+                    </div>
+                </div>
+                </div>
             </div>
-        </form>
-    </main>
+            </div>
+        </div>
+        </div>
+    </section>
 
-    <footer class="footer seccion fixed-bottom register">
+    <footer class="footer">
         <div class="contenedor contenedor-footer">
             <p class="copyright">ISCow-In &copy; 2021</p>
             <div class="contenedor-contacto">
@@ -48,5 +113,6 @@
             </div>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
