--- a/src/views/scss/layout/_login.scss
+++ b/src/views/scss/layout/_login.scss
@@ -46,53 +46,56 @@
     right: -30px;
     bottom: -80px;
 }
-form{
-    height: 520px;
-    width: 400px;
-    background-color: v.$beigeTransparente;
-    position: absolute;
-    transform: translate(-50%,-50%);
-    top: 50%;
-    left: 50%;
-    border-radius: 10px;
-    backdrop-filter: blur(10px);
-    border: 2px solid v.$beigeTransparente;
-    box-shadow: 0 0 40px v.$negroHumo;
-    padding: 50px 35px;
-}
-form *{
-    font-family: 'Poppins',sans-serif;
-    color: v.$negroHumo;
-    letter-spacing: 0.5px;
-    outline: none;
-    border: none;
-}
-form h3{
-    font-size: 32px;
-    font-weight: 500;
-    line-height: 42px;
-    text-align: center;
-}
 
-label{
-    display: block;
-    margin-top: 30px;
-    font-size: 16px;
-    font-weight: 500;
+.login{
+    form{
+        height: 520px;
+        width: 400px;
+        background-color: v.$beigeTransparente;
+        position: absolute;
+        transform: translate(-50%,-50%);
+        top: 50%;
+        left: 50%;
+        border-radius: 10px;
+        backdrop-filter: blur(10px);
+        border: 2px solid v.$beigeTransparente;
+        box-shadow: 0 0 40px v.$negroHumo;
+        padding: 50px 35px;
+    }
+    form *{
+        font-family: 'Poppins',sans-serif;
+        color: v.$negroHumo;
+        letter-spacing: 0.5px;
+        outline: none;
+        border: none;
+    }
+    form h3{
+        font-size: 32px;
+        font-weight: 500;
+        line-height: 42px;
+        text-align: center;
+    }
+    
+    label{
+        display: block;
+        margin-top: 30px;
+        font-size: 16px;
+        font-weight: 500;
+    }
+    input{
+        display: block;
+        height: 50px;
+        width: 100%;
+        background-color: v.$beige2;
+        border-radius: 3px;
+        padding: 0 10px;
+        margin-top: 8px;
+        font-size: 14px;
+        font-weight: 300;
+    }
+    ::placeholder{
+        color: v.$gris;
+    }
+    
 }
-input{
-    display: block;
-    height: 50px;
-    width: 100%;
-    background-color: v.$beige2;
-    border-radius: 3px;
-    padding: 0 10px;
-    margin-top: 8px;
-    font-size: 14px;
-    font-weight: 300;
-}
-::placeholder{
-    color: v.$gris;
-}
-
 
