register user panel finished, added title

--- a/src/views/registerUser.html
+++ b/src/views/registerUser.html
@@ -25,8 +25,9 @@
         </div>
     </header>
 
-    <section class="h-100 h-custom">
+    <section class="h-70 h-custom">
         <div class="container py-5 h-100">
+            <h1>Registro de usuarios</h1>
         <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col-12">
             <div class="card card-registration card-registration-2" style="border-radius: 15px;">
