--- a/src/views/css/app.css
+++ b/src/views/css/app.css
@@ -221,11 +221,6 @@ h3 {
   color: #8a6642;
 }
 
-@media (min-width: 1025px) {
-  .h-custom {
-    height: 100vh !important;
-  }
-}
 .card-registration .select-input.form-control[readonly]:not([disabled]) {
   font-size: 1rem;
   line-height: 2.15;
@@ -253,6 +248,10 @@ h3 {
     border-bottom-right-radius: 15px;
   }
 }
+.registro h1 {
+  align-items: center;
+}
+
 .p-5 .form-outline {
   position: relative;
   margin-bottom: 1.25em;
