added password forms, fixed register button

--- a/src/views/scss/layout/_registerUser.scss
+++ b/src/views/scss/layout/_registerUser.scss
@@ -101,7 +101,7 @@
         background-color: v.$beigePardo;
     }
     button{
-
+        width: 96%;
         background-color: v.$beigeClaro;
         color: v.$beigePardo;
         &:hover{
