--- a/src/views/registerUser.html
+++ b/src/views/registerUser.html
@@ -62,14 +62,30 @@
                             <label class="form-label" for="email">Correo electrónico</label>
                         </div>
                         </div>
-                        <div class="row">
-                        <div class="col-md-6 mb-4 pb-2 mb-md-0 pb-md-0">
-                            <div class="form-outline">
+
+                            <div class="col-md-6 mb-4 pb-2 ">
+                                <div class="form-outline mb-4">
+                                <input type="password" id="password" class="form-control form-control-lg" />
+                                <label class="form-label" for="form3Examplev5">Contraseña</label>
+                                </div>
+                            </div>
+
+
+                            <div class="col-md-6 mb-4 pb-2 ">
+                                <div class="form-outline mb-4">
+                                <input type="password" id="password2" class="form-control form-control-lg" />
+                                <label class="form-label" for="form3Examplev5">Confirmar contraseña</label>
+                                </div>
+                            </div>
+
+
+                        <div class="col-md-6 mb-4 pb-2 ">
+                            <div class="form-outline mb-4">
                             <input type="text" id="idnumber" class="form-control form-control-lg" />
                             <label class="form-label" for="form3Examplev5">Número de identificación</label>
                             </div>
                         </div>
-                        </div>
+
                     </div>
                     </div>
                     <div class="col-lg-6 bg-indigo text-white">
