--- a/src/views/index.html
+++ b/src/views/index.html
@@ -6,7 +6,10 @@
     <title>ISCow-In</title>
     <!-- Bootstrap core CSS -->  
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css\app.css"> 
+
+
 </head>
 
 <body>
@@ -28,13 +31,12 @@
 
     <main class="contenedor seccion">
         <h1>Tabla</h1>
-        
     </main>
 
     <section class="seccion contenedor">
         <div class="container ">
                     <div class="table-responsive">
-                        <table class="table table-striped table-hover">
+                        <table id="table" class="table table-striped table-hover">
                             <thead>
                                 <tr>
                                     <th>ID</th>
@@ -48,11 +50,12 @@
                             </thead>
                                 <tbody id="tableBody_Cows" class="table-group-divider">
                             </tbody>
+                        </table>
                     </div>
         </div>
     </section>
 
-    <footer class="footer seccion fixed-bottom"> <!-- need to fix the way the footer is inside the main section -->
+    <footer class="footer"> <!-- need to fix the way the footer is inside the main section -->
         <div class="contenedor contenedor-footer">
             <p class="copyright">ISCow-In &copy; 2021</p>
             <div class="contenedor-contacto">
@@ -60,6 +63,8 @@
             </div>
         </div>
     </footer>
+    <!-- Bootstrap core JavaScript-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="../../index.js"></script>
 </body>
 </html>
