form finished, no functional, need api to make functionalities

--- a/src/views/cows.html
+++ b/src/views/cows.html
@@ -107,11 +107,11 @@
                                     <div class="form-outline">
                                         <label class="form-label">Origen</label><br>
                                         <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="radioNatural" value="natural">
+                                            <input class="form-check-input" type="radio" name="radioorigen" id="radioNatural" value="natural">
                                             <label class="form-check-label" for="inlineRadio1">Natural</label>
                                         </div>
                                         <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="radioCompra" value="compra">
+                                            <input class="form-check-input" type="radio" name="radioorigen" id="radioCompra" value="compra">
                                             <label class="form-check-label" for="inlineRadio2">Compra</label>
                                         </div>
                                     </div>
