--- a/src/views/css/app.css
+++ b/src/views/css/app.css
@@ -320,70 +320,6 @@ h3 {
   background-color: #f5deb3;
 }
 
-.background {
-  width: 430px;
-  height: 520px;
-  position: absolute;
-  transform: translate(-50%, -50%);
-  left: 50%;
-  top: 50%;
-}
-
-.box {
-  text-align: center;
-}
-
-.button {
-  width: 100px;
-  height: 30px;
-  background-color: #f5deb3;
-  border-radius: 5px;
-  color: white;
-  font-size: 15px;
-  margin: 10px;
-  cursor: pointer;
-}
-
-.overlay-cows {
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  background-color: rgba(0, 0, 0, 0.5);
-  transition: opacity 0.5s;
-  visibility: hidden;
-  opacity: 0;
-}
-.overlay-cows :target {
-  visibility: visible;
-  opacity: 1;
-}
-
-.wrapper {
-  margin: 70px;
-  padding: 29px;
-  background-color: white;
-  border-radius: 5px;
-  width: 30%;
-  position: relative;
-  transition: all 5s ease-in-out;
-}
-.wrapper h2 {
-  margin-top: 0;
-  color: #333;
-}
-.wrapper .close {
-  position: absolute;
-  top: 20px;
-  right: 30px;
-  transition: all 200ms;
-  font-size: 30px;
-  font-weight: bold;
-  text-decoration: none;
-  color: #333;
-}
-.wrapper .content {
-  max-height: 30%;
-  overflow: auto;
+#hidePadres {
+  display: none;
 }
