--- a/src/views/cows.html
+++ b/src/views/cows.html
@@ -136,7 +136,7 @@
         </div>
     </section>
 
-    <footer class="footer"> <!-- need to fix the way the footer is inside the main section -->
+    <footer class="footer fixed-bottom">
         <div class="contenedor contenedor-footer">
             <p class="copyright">ISCow-In &copy; 2021</p>
             <div class="contenedor-contacto">
