ICOW-57 finished panel, remade navbar

--- a/src/views/cows.html
+++ b/src/views/cows.html
@@ -129,6 +129,11 @@
                                         </select>
                                     </div>
                                 </div>
+                                <div class="col-md-10 pb-2" id="buttonAddCow">
+                                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalNewCow">
+                                        Agregar
+                                    </button>
+                                </div>
                             </div>
                         </form>
                     </div>
