--- a/src/views/fincas.html
+++ b/src/views/fincas.html
@@ -35,22 +35,61 @@
 
     <section class="seccion contenedor">
         <div class="container ">
-                    <div class="table-responsive">
-                        <table id="table" class="table table-striped table-hover">
-                            <thead>
-                                <tr>
-                                    <th>#</th>
-                                    <th>ID</th>
-                                    <th>Nombre finca</th>
-                                    <th>Dirección</th>
-                                    <th>Número de lotes</th>
-                                    <th>Acciones</th>
-                                </tr>
-                            </thead>
-                                <tbody id="tableBody_Fincas" class="table-group-divider">
-                            </tbody>
-                        </table>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalNewFinca">
+                Agregar Finca
+            </button>
+            <div class="table-responsive">
+                <table id="table" class="table table-striped table-hover">
+                    <thead>
+                        <tr>
+                            <th>#</th>
+                            <th>ID</th>
+                            <th>Nombre finca</th>
+                            <th>Dirección</th>
+                            <th>Número de lotes</th>
+                            <th>Acciones</th>
+                        </tr>
+                    </thead>
+                        <tbody id="tableBody_Fincas" class="table-group-divider">
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </section>
+
+    <section class="seccion contenedor popup">
+        <div class="modal fade" id="modalNewFinca">
+            <div class="modal-dialog modal-dialog-centered modal-md">
+                <div class="modal-content">
+                    <div class="seccion contenedor">
+                        <form>
+                            <div class="modal-header">
+                                <h4 class="modal-title">Agregar Finca</h4>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-hidden="true"></button>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-10 pb-2">
+                                    <div class="form-outline">
+                                        <label class="form-label">Nombre</label>
+                                        <input type="text" id="fincaname" class="form-control form-control-lg" />
+                                    </div>
+                                </div>
+                                <div class="col-md-10 pb-2">
+                                    <div class="form-outline">
+                                        <label class="form-label">Dirección</label>
+                                        <input type="text" id="fincaname" class="form-control form-control-lg" />
+                                    </div>
+                                </div>
+                                <div class="col-md-10 pb-2" id="buttonAddFinca">
+                                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalNewCow">
+                                        Agregar
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
                     </div>
+                </div>
+            </div>
         </div>
     </section>
 
