--- a/src/views/scss/layout/_navegacion.scss
+++ b/src/views/scss/layout/_navegacion.scss
@@ -13,9 +13,12 @@
         text-decoration: none;
         font-size: 1.8rem;
         display: block;
-        text-align: center;
         &:hover{
-            color: v.$azulClaro;
+            color: v.$beigePardo;
         }
     }
+}
+
+.dropdown-item{
+    padding: 0.2rem 0.2rem 0.2rem 0;
 }
