ICOW-57 Finished navbar

--- a/src/views/fincas.html
+++ b/src/views/fincas.html
@@ -19,11 +19,29 @@
                 <a href="index.html">
                     <img src="" alt="Logotipo de ISCow-In">ISCow-In
                 </a>
-
-                <nav class="navegacion">
-                    <a href="reports.html">Reportes</a>
-                    <a href="account.html">Cuenta</a>
-                    <a href="account.html">Salir</a>
+                <nav class="navegacion navbar navbar-expand-lg">
+                    <div class="container-fluid">
+                        <a class="navbar-brand navMain" href="#">Inicio</a>
+                        <a class="navbar-brand navMain" href="#">Reportes</a>
+                        <a class="navbar-brand navMain" href="#">Cuenta</a>
+                        <a class="navbar-brand navMain" href="#">Salir</a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbar">
+                            <ul class="navbar-nav">
+                                <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Tablas
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                    <li><a class="dropdown-item" href="cows.html">Tabla Vacas</a></li>
+                                    <li><a class="dropdown-item" href="#">Tabla Lotes</a></li>
+                                </ul>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </nav>
             </div>
         </div>
