--- a/src/views/usuarios.html
+++ b/src/views/usuarios.html
@@ -32,12 +32,12 @@
                             <ul class="navbar-nav">
                                 <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Dropdown
+                                    Tablas
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                    <li><a class="dropdown-item" href="#">Action</a></li>
-                                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                    <li><a class="dropdown-item" href="fincas.html">Tabla Fincas</a></li>
+                                    <li><a class="dropdown-item" href="cows.html">Tabla Vacas</a></li>
+                                    <li><a class="dropdown-item" href="#">Tabla Lotes</a></li>
                                 </ul>
                                 </li>
                             </ul>
