--- a/src/views/fincas.html
+++ b/src/views/fincas.html
@@ -19,11 +19,29 @@
                 <a href="index.html">
                     <img src="" alt="Logotipo de ISCow-In">ISCow-In
                 </a>
-
-                <nav class="navegacion">
-                    <a href="reports.html">Reportes</a>
-                    <a href="account.html">Cuenta</a>
-                    <a href="account.html">Salir</a>
+                <nav class="navegacion navbar navbar-expand-lg">
+                    <div class="container-fluid">
+                        <a class="navbar-brand navMain" href="#">Inicio</a>
+                        <a class="navbar-brand navMain" href="#">Reportes</a>
+                        <a class="navbar-brand navMain" href="#">Cuenta</a>
+                        <a class="navbar-brand navMain" href="#">Salir</a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbar">
+                            <ul class="navbar-nav">
+                                <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Tablas
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                    <li><a class="dropdown-item" href="cows.html">Tabla Vacas</a></li>
+                                    <li><a class="dropdown-item" href="#">Tabla Lotes</a></li>
+                                </ul>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </nav>
             </div>
         </div>
@@ -35,22 +53,61 @@
 
     <section class="seccion contenedor">
         <div class="container ">
-                    <div class="table-responsive">
-                        <table id="table" class="table table-striped table-hover">
-                            <thead>
-                                <tr>
-                                    <th>#</th>
-                                    <th>ID</th>
-                                    <th>Nombre finca</th>
-                                    <th>Dirección</th>
-                                    <th>Número de lotes</th>
-                                    <th>Acciones</th>
-                                </tr>
-                            </thead>
-                                <tbody id="tableBody_Fincas" class="table-group-divider">
-                            </tbody>
-                        </table>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalNewFinca">
+                Agregar Finca
+            </button>
+            <div class="table-responsive">
+                <table id="table" class="table table-striped table-hover">
+                    <thead>
+                        <tr>
+                            <th>#</th>
+                            <th>ID</th>
+                            <th>Nombre finca</th>
+                            <th>Dirección</th>
+                            <th>Número de lotes</th>
+                            <th>Acciones</th>
+                        </tr>
+                    </thead>
+                        <tbody id="tableBody_Fincas" class="table-group-divider">
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </section>
+
+    <section class="seccion contenedor popup">
+        <div class="modal fade" id="modalNewFinca">
+            <div class="modal-dialog modal-dialog-centered modal-md">
+                <div class="modal-content">
+                    <div class="seccion contenedor">
+                        <form>
+                            <div class="modal-header">
+                                <h4 class="modal-title">Agregar Finca</h4>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-hidden="true"></button>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-10 pb-2">
+                                    <div class="form-outline">
+                                        <label class="form-label">Nombre</label>
+                                        <input type="text" id="fincaname" class="form-control form-control-lg" />
+                                    </div>
+                                </div>
+                                <div class="col-md-10 pb-2">
+                                    <div class="form-outline">
+                                        <label class="form-label">Dirección</label>
+                                        <input type="text" id="fincaname" class="form-control form-control-lg" />
+                                    </div>
+                                </div>
+                                <div class="col-md-10 pb-2" id="buttonAddFinca">
+                                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalNewCow">
+                                        Agregar
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
                     </div>
+                </div>
+            </div>
         </div>
     </section>
 
