--- a/src/views/usuarios.html
+++ b/src/views/usuarios.html
@@ -19,11 +19,30 @@
                 <a href="index.html">
                     <img src="" alt="Logotipo de ISCow-In">ISCow-In
                 </a>
-
-                <nav class="navegacion">
-                    <a href="reports.html">Reportes</a>
-                    <a href="account.html">Cuenta</a>
-                    <a href="account.html">Salir</a>
+                <nav class="navegacion navbar navbar-expand-lg">
+                    <div class="container-fluid">
+                        <a class="navbar-brand navMain" href="#">Inicio</a>
+                        <a class="navbar-brand navMain" href="#">Reportes</a>
+                        <a class="navbar-brand navMain" href="#">Cuenta</a>
+                        <a class="navbar-brand navMain" href="#">Salir</a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbar">
+                            <ul class="navbar-nav">
+                                <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Tablas
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                    <li><a class="dropdown-item" href="fincas.html">Tabla Fincas</a></li>
+                                    <li><a class="dropdown-item" href="cows.html">Tabla Vacas</a></li>
+                                    <li><a class="dropdown-item" href="#">Tabla Lotes</a></li>
+                                </ul>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </nav>
             </div>
         </div>
@@ -35,24 +54,25 @@
 
     <section class="seccion contenedor">
         <div class="container ">
-                    <div class="table-responsive">
-                        <table id="table" class="table table-striped table-hover">
-                            <thead>
-                                <tr>
-                                    <th>#</th>
-                                    <th>ID</th>
-                                    <th>Nombre de usuario</th>
-                                    <th>Nombre</th>
-                                    <th>Apellido</th>
-                                    <th>Correo electrónico</th>
-                                    <th>Es administrador</th>
-                                    <th>Acciones</th>
-                                </tr>
-                            </thead>
-                                <tbody id="tableBody_Users" class="table-group-divider">
-                            </tbody>
-                        </table>
-                    </div>
+            <input type="button" class="btn btn-primary" value="Agregar Usuario" onclick="location.href='registerUser.html'">
+            <div class="table-responsive">
+                <table id="table" class="table table-striped table-hover">
+                    <thead>
+                        <tr>
+                            <th>#</th>
+                            <th>ID</th>
+                            <th>Nombre de usuario</th>
+                            <th>Nombre</th>
+                            <th>Apellido</th>
+                            <th>Correo electrónico</th>
+                            <th>Es administrador</th>
+                            <th>Acciones</th>
+                        </tr>
+                    </thead>
+                        <tbody id="tableBody_Users" class="table-group-divider">
+                    </tbody>
+                </table>
+            </div>
         </div>
     </section>
 
