--- a/src/views/registerUser.html
+++ b/src/views/registerUser.html
@@ -12,12 +12,9 @@
     <header class="header">
         <div class="contenedor contenido-header">
             <div class="barra">
-                <a href="index.html">
-                    <img src="" alt="Logotipo de ISCow-In">ISCow-In
-                </a>
                 <nav class="navegacion navbar navbar-expand-lg">
                     <div class="container-fluid">
-                        <a class="navbar-brand navMain" href="#">Inicio</a>
+                        <a href="index.html"><img src="assets/LogoNegro (1).png" alt="logo"></a>
                         <a class="navbar-brand navMain" href="#">Reportes</a>
                         <a class="navbar-brand navMain" href="#">Cuenta</a>
                         <a class="navbar-brand navMain" href="#">Salir</a>
