ICOW-52 lotes.html initalized

--- a/src/views/usuarios.html
+++ b/src/views/usuarios.html
@@ -35,7 +35,7 @@
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                     <li><a class="dropdown-item" href="fincas.html">Tabla Fincas</a></li>
                                     <li><a class="dropdown-item" href="cows.html">Tabla Vacas</a></li>
-                                    <li><a class="dropdown-item" href="#">Tabla Lotes</a></li>
+                                    <li><a class="dropdown-item" href="lotes.html">Tabla Lotes</a></li>
                                 </ul>
                                 </li>
                             </ul>
