--- a/src/views/fincas.html
+++ b/src/views/fincas.html
@@ -33,7 +33,7 @@
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                     <li><a class="dropdown-item" href="cows.html">Tabla Vacas</a></li>
-                                    <li><a class="dropdown-item" href="#">Tabla Lotes</a></li>
+                                    <li><a class="dropdown-item" href="lotes.html">Tabla Lotes</a></li>
                                 </ul>
                                 </li>
                             </ul>
