--- a/src/views/lotes.html
+++ b/src/views/lotes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ISCow-In - Vacas</title>
+    <title>ISCow-In - Lotes</title>
     <!-- Bootstrap core CSS -->  
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -33,7 +33,7 @@
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                     <li><a class="dropdown-item" href="fincas.html">Tabla Fincas</a></li>
-                                    <li><a class="dropdown-item" href="lotes.html">Tabla Lotes</a></li>
+                                    <li><a class="dropdown-item" href="cows.html">Tabla Vacas</a></li>
                                 </ul>
                                 </li>
                             </ul>
@@ -45,13 +45,13 @@
     </header>
 
     <main class="contenedor seccion">
-        <h1>Tabla Vacas</h1>
+        <h1>Lotes de la finca #nombre</h1>
     </main>
 
     <section class="seccion contenedor">
         <div class="container">
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalNewCow">
-                Agregar vaca
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalNewLotes">
+                Agregar Lote
             </button>
             <div class="table-responsive">
                 <table id="table" class="table table-striped table-hover">
@@ -59,15 +59,12 @@
                         <tr>
                             <th>#</th>
                             <th>ID</th>
-                            <th>Raza</th>
-                            <th>Sexo</th>
-                            <th>Fecha de Nacimiento</th>
-                            <th>Edad</th>
-                            <th>Origen</th>
+                            <th>Área</th>
+                            <th># de Vacas</th>
                             <th>Acciones</th>
                         </tr>
                     </thead>
-                        <tbody id="tableBody_Cows" class="table-group-divider">
+                        <tbody id="tableBody_Lotes" class="table-group-divider">
                     </tbody>
                 </table>
             </div>
@@ -81,7 +78,7 @@
                     <div class="seccion contenedor">
                         <form>
                             <div class="modal-header">
-                                <h4 class="modal-title">Agregar vaca</h4>
+                                <h4 class="modal-title">Agregar Lote</h4>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-hidden="true"></button>
                             </div>
                             <div class="row">
