--- a/src/views/login.html
+++ b/src/views/login.html
@@ -13,7 +13,7 @@
             <div class="shape"></div>
             <div class="shape"></div>
         </div>
-        <form>
+        <form id="formLogin">
             <h3>Ingrese sus credenciales</h3>
     
             <label for="username">Usuario</label>
