--- a/src/views/fincas.html
+++ b/src/views/fincas.html
@@ -21,7 +21,7 @@
                         <a href="index.html"><img src="assets/LogoNegro (1).png" alt="logo"></a>
                         <a class="navbar-brand navMain" href="#">Reportes</a>
                         <a class="navbar-brand navMain" href="#">Cuenta</a>
-                        <a class="navbar-brand navMain" href="#">Salir</a>
+                        <a class="navbar-brand navMain" href="login.html">Salir</a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                         </button>
@@ -101,7 +101,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-10 pb-2">
-                                    <button type="button" class="btn btn-primary" id="addNewFarm">
+                                    <button type="button" class="btn btn-primary" id="buttonAddFarm">
                                         Agregar
                                     </button>
                                 </div>
@@ -123,6 +123,6 @@
     </footer>
     <!-- Bootstrap core JavaScript-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <script src="../../index.js"></script>
+    <script src="./utils/farms.js"></script>
 </body>
 </html>
