fixed footers, ready to send to teach

--- a/src/views/lotes.html
+++ b/src/views/lotes.html
@@ -193,7 +193,7 @@
         </div>
     </section>
 
-    <footer class="footer">
+    <footer class="footer fixed-bottom">
         <div class="contenedor contenedor-footer">
             <p class="copyright">ISCow-In &copy; 2021</p>
             <div class="contenedor-contacto">
